--- a/src/styles/general.scss
+++ b/src/styles/general.scss
@@ -1,3 +1,4 @@
+@use '@fortawesome/fontawesome-free/css/all.css';
 @use "./partials/_utilities" as *;
 @use "./partials/_variables" as *;
 @import "bootstrap/scss/bootstrap";
